--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #menu
 {
+	margin-top: 0;
 	position: fixed;
 	width: 100%;
 	height: 35px;
@@ -8,6 +9,7 @@
 #menu li
 {
 	border-top: 3px solid transparent;
+	margin-top: 0;
 	background-color: lavender;
 	font-size: large;
 	border-bottom: none;
@@ -22,4 +24,7 @@
 	background-color: lavender;
 	color: darkblue;
 
+}
+#photos{
+	margin-top: 20px;
 }
