--- a/style.css
+++ b/style.css
@@ -1,30 +1,105 @@
-#menu
-{
-	margin-top: 0;
+
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: #1F6DB0;
 	position: fixed;
+	top: 0;
 	width: 100%;
-	height: 35px;
-	background: white;
 }
-#menu li
-{
-	border-top: 3px solid transparent;
-	margin-top: 0;
-	background-color: lavender;
-	font-size: large;
-	border-bottom: none;
-	display: block;
-	width: 150px;
+li {
 	float: left;
-	margin-left: 2px;
-
 }
-#menu a
-{
-	background-color: lavender;
-	color: darkblue;
-
+li a {
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
 }
+
+li a:hover:not(.active) {
+	background-color: #B03754;
+}
+
+
 #photos{
 	margin-top: 20px;
+}
+input[type=text], select, textarea {
+	width: 100%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
+}
+
+input[type=submit] {
+	background-color: #4CAF50;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	cursor: pointer;
+}
+
+input[type=submit]:hover {
+	background-color: #45a049;
+}
+{
+	box-sizing: border-box;
+}
+
+/* Style inputs */
+input[type=text], select, textarea {
+	width: 100%;
+	padding: 12px;
+	border: 1px solid #ccc;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
+}
+
+input[type=submit] {
+	background-color: #4CAF50;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	cursor: pointer;
+}
+
+input[type=submit]:hover {
+	background-color: #45a049;
+}
+
+/* Style the container/contact section */
+.container {
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 10px;
+}
+
+/* Create two columns that float next to eachother */
+.column {
+	float: left;
+	width: 50%;
+	margin-top: 6px;
+	padding: 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+	.column, input[type=submit] {
+		width: 100%;
+		margin-top: 0;
+	}
 }
