--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ input[type=submit]:hover {
 .container {
 	border-radius: 5px;
 	background-color: #f2f2f2;
-	padding: 10px;
+	padding: 20fpx;
 }
 
 /* Create two columns that float next to eachother */
